[package]
name = "fast-tracer"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@univ-grenoble-alpes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing="0.1.19"
tracing-core="0.1.14"
lazy_static="*"
either="*"
itertools="*"
# rayon = { path = "../rayon" }
rayon = { git = "https://github.com/wagnerf42/rayon", branch = "tracing" }
